# autodft

./: .gitignore  README.md  pyproject.toml
.github/workflows/: mirror.yml
autodft/: __init__.py  __main__.py  accounts.py  config.py  db.py  paths.py
autodft/analysis/: __init__.py  state_analysis.py
autodft/api/: __init__.py  admin_ops.py  app.py  auth.py  identity.py  routes.py
autodft/api/templates/: dashboard.html  login.html
autodft/cli/: admin.py  main.py  run.py  status.py  submit.py
autodft/engine/: __init__.py  circuit_breaker.py  entrypoint_processor.py  pipeline.py  scheduler.py  state_machine.py
autodft/extraction/: __init__.py  extractor.py
autodft/models/: __init__.py  entrypoint.py  enums.py  geometry.py  header.py  job.py  molecule.py  state.py  task.py  user.py
autodft/qm/: __init__.py  base.py
autodft/qm/orca/: __init__.py  defaults.py  input_generator.py  parser.py  retry.py
autodft/qm/templates/: orca_input.inp.j2  submit.cmd.j2
config/: default.toml  reaction.toml
docs/: API.md  UPGRADE-user-accounts.md  USER-ACCOUNTS.md
examples/: 01_submit_via_python.py  02_submit_via_rest_api.py  03_monitor_progress.py  04_export_results.py  05_export_via_rest_api.py
tests/: conftest.py  test_accounts.py  test_admin_ops.py  test_api_security.py  test_authorization.py  test_base_job.py  test_dashboard.py  test_engine.py  test_export_paths.py  test_job_handler.py  test_models.py  test_optimization_job.py  test_orca_parser.py  test_pipeline.py  test_scoping_enforced.py  test_singlepoint_job.py
