[project]
name = "autodft"
version = "0.4.2"
description = "Automated DFT calculation pipeline with SQLite backend and SLURM integration"
requires-python = ">=3.10"
dependencies = [
    "sqlmodel>=0.0.22",
    "typer[all]>=0.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    # Required by FastAPI's Form() — used by the /login handler.
    "python-multipart>=0.0.9",
    "numpy>=1.24",
    "rich>=13.0",
    # Required on the controller to convert SMILES -> initial 3D geometry.
    # Without this, submissions fail with "Cannot generate 3-D geometry".
    "rdkit>=2023.3",
    # XLSX export from the dashboard's State Analysis page.
    "openpyxl>=3.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
autodft = "autodft.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
